<resources>
    <string name="app_name">mul</string>
    <string name="title_activity_file_chooser">File chooser</string>
    <string name="menu_add_file">Add file</string>
    <string name="menu_add_folder">Add folder</string>
    <string name="fragment_home_title">Library</string>
    <string name="fragment_playlist_title">Playlist</string>
    <string name="fragment_search_title">Search</string>
    <string name="msg_create_playlist">Create Playlist</string>
    <string name="msg_create_playlist_name">playlist name</string>
    <string name="msg_create_playlist_already_exists">Playlist already exists!</string>
    <string name="file_chooser_file">Select File</string>
    <string name="file_chooser_folder">Select Folder</string>
    <string name="file_chooser_select">Select</string>
    <string name="menu_add">Add</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_select_source">Select source</string>
    <string name="menu_source_manager">Source manager</string>
    <string name="menu_add_playlist">Add playlist</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_close">Close</string>
    <string name="menu_add_from_library">Add from library</string>
    <string name="search_add_to">Add to Playlist:</string>
    <string name="activity_debug_title">Debug</string>
    <string name="activity_source_title">Source Manager</string>
    <string name="activity_file_title">Explorer</string>
    <string name="source_installed">Installed Sources</string>
    <string name="source_available">Available Sources</string>
    <string name="prompt_remove_song_from_playlist">Remove this song from playlist?</string>
    <string name="prompt_remove_song_from_library">Remove this song from library and playlists?</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="msg_delete_playlist">Delete following playlist?</string>
    <string name="msg_add_success">Successfully added songs to playlist</string>
    <string name="msg_add_err_duplicate">Failed to add some songs : already exists</string>
    <string name="msg_ok">Dismiss</string>
    <string name="activity_library_select">Select songs</string>
    <string name="bottom_menu_delete">Delete</string>
    <string name="bottom_menu_actions">Actions</string>
    <string name="search_load_more">Load more</string>
    <string name="search_previous">Previous</string>
    <string name="bottom_menu_play">Play</string>
    <string name="menu_source_setting">Source settings</string>
    <string name="activity_source_setting">Source Setup</string>
    <string name="bottom_menu_rename">Rename</string>
    <string name="msg_rename_playlist">Rename playlist</string>
    <string name="msg_rename_playlist_fail">Fail to rename playlist</string>
    <string name="msg_apply_success">Sucessfully applied changes</string>
    <string name="setting_apply">Apply</string>
    <string name="setting_reset">Reset</string>
    <string name="menu_settings">Settings</string>
    <string name="activity_settings">Settings</string>
    <string name="setting_point_color">Change point color</string>
    <string name="setting_point_color_sum">Customize point color used in application</string>
    <string name="setting_opacity">Opacity for library items</string>
    <string name="setting_opacity_sum">This changes the album art opacity of library items</string>
    <string name="setting_watch_list">Manage watch list</string>
    <string name="setting_watch_list_sum">Add or remove folders from library watch list</string>
    <string name="activity_watch_list_manager">Watch List Manager</string>
    <string name="menu_delete">Delete</string>
    <string name="cpv_presets">Presets</string>
    <string name="cpv_custom">Custom</string>
    <string name="cpv_select">Select</string>
    <string name="menu_recursive">Include subfolders</string>
</resources>